refactor: refactoring post endpoints